<resources>
    <string name="app_name">SportsFight</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome">Welcome ! </string>
    <string name="signup_heading">Create your Account </string>
    <string name="welcome_back">Welcome Back! </string>
    <string name="logindetaill">Enter your registered email id or \nmobile number and password </string>
    <string name="signupdetaill">Please enter below details  \nfor creating new account </string>
    <string name="login">LOGIN</string>

    <string name="welcomeheading1">Welcome &amp; Explore</string>
    <string name="welcomeheading2">Challenge your friends</string>
    <string name="welcomeheading3">Bid on any match</string>
    <string name="forgetpassword">Forgot Password ?</string>
    <string name="preferences">Set your preferences</string>
    <string name="preferencesupdate">Update your preferences</string>
    <string name="preferencesdetails">Choose your preffered game  &#38; Receive updates &#38; Alerts</string>
    <string name="forgetpasswordu"><u>Forgot Password ?</u></string>
    <string name="addbeneficiaryu"><u>Add Beneficiary</u></string>
    <string name="newuser">New User? Create Account</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="signin"><u>Sign In</u></string>
    <string name="forgetpassworddetails">Please enter details below to receive OTP for Password reset</string>
    <string name="setnewpassword">Set New Password</string>
    <string name="setnewpassworddetails">Enter received OTP &amp; Set New Password</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="start">START</string>
    <string name="welcomedetail1">Welcome to Sports Fight App\n Register as contestant and challenge \nfriends or bid on any match...</string>
    <string name="welcomedetail2">Register as contestant and challenge\n friends as an Opponent on any match \n from the list of scheduled games..</string>
    <string name="welcomedetail3">Place your bets on any match from the list of scheduled games...</string>
    <string name="assistance">For any assistance, please do drop in an \nemail to: <u>ashishk@dmss.co.in </u> </string>
    <string name="reotp"><u>Resend OTP</u></string>
    <string name="verify"><u>Verify</u></string>
    <string name="addpoints">Add Points</string>
    <string name="viewall"><u>View All</u></string>
    <string name="note">* Please note that Rs 1 = 10 points.\nMinimum points that can be added = 100 points.</string>
    <string name="title_activity_testing2">Testing2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_new_dash_board">NewDashBoard</string>
    <string name="title_home">Home</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_booking">Booking</string>
    <string name="title_mygame">MyGame</string>
    <string name="title_notifications">Notification</string>


    <string name="checksum_generation_url">Checksum Generation URL : </string>
    <string name="checksum_verification_url">Checksum Verification URL : </string>
    <string name="sample_checksum_generation_url">https://pguat.paytm.com/merchant-chksum/ChecksumGenerator</string>
    <string name="sample_checksum_verification_url">https://pguat.paytm.com/merchant-chksum/ValidateChksum</string>
    <string name="start_transaction">Start Transaction</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
