<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/activity_welcome" android:background="@drawable/app_bg">
<ScrollView
    android:layout_marginTop="140dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/black_overlay"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="30dp"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <sportsfight.com.s.common.Heading
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14pt"
                    android:text="@string/setnewpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <sportsfight.com.s.common.DetailsCustomTextView
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="8pt"
                    android:text="@string/setnewpassworddetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <LinearLayout
                    android:layout_margin="10dp"
                    android:background="@drawable/blurr_bg_edittext"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="40dp">
                    <ImageView
                        android:src="@drawable/otp"
                        android:padding="5dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                    <View
                        android:layout_margin="1dp"
                        android:background="@color/white"
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"/>

                    <EditText
                        android:id="@+id/otp"
                        android:inputType="number"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:hint="Enter OTP"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:maxLength="6"
                        android:layout_margin="5dp"
                        android:background="@color/blurrbg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="10dp"
                    android:background="@drawable/blurr_bg_edittext"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="40dp">
                    <ImageView
                        android:src="@drawable/password"
                        android:padding="7dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                    <View
                        android:layout_margin="1dp"
                        android:background="@color/white"
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"/>

                    <EditText
                        android:id="@+id/password"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:hint="Enter Password"
                        android:gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:background="@color/blurrbg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <LinearLayout
                    android:layout_margin="10dp"
                    android:background="@drawable/blurr_bg_edittext"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="40dp">
                    <ImageView
                        android:src="@drawable/password"
                        android:padding="7dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                    <View
                        android:layout_margin="1dp"
                        android:background="@color/white"
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"/>

                    <EditText
                        android:id="@+id/confirmpassword"
                        android:inputType="textPassword"
                        android:hint="Confirm Password"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:background="@color/blurrbg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/submit"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:text="Submit"
                android:background="@drawable/purplebutton"
                android:layout_gravity="center"
                android:layout_width="140dp"
                android:textSize="8pt"
                android:layout_height="40dp" />
            <sportsfight.com.s.common.DetailsCustomTextView
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="8pt"
                android:id="@+id/resendOTP"
                android:text="@string/reotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />


        </LinearLayout>
</ScrollView>
        <ImageView

            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            android:layout_width="200dp"
            android:layout_height="150dp" />
    </RelativeLayout>


</LinearLayout>
